fix wrong z-index with title in grid zone

--- a/blocks/box.css
+++ b/blocks/box.css
@@ -4,6 +4,7 @@
   aspect-ratio: 1;
   border-radius: 80%;
   display: flex;
+  z-index: 1;
   justify-content: center;
   align-items: center;
   font-size: 80px;
